# autonomy-ws-25-26

./: .gitignore  COORDINATE_FIX_PLAN.md  COORDINATE_FIX_SUMMARY.md  DESIGN_STRATEGY.md  DOCK_DISTANCE_FLOW_VERIFICATION.md  MAVROS_AND_TOPICS.md  MAVROS_README.md  Mapping Pipeline  NETWORKS.md  NODE(inference).py  NODE_SCRIPTS.md  PIPELINE_REVIEW_SUMMARY.md  PORTFOLIO-BUOY-DETECTION  QOS_FIX_SUMMARY.md  README.md  README.txt  README_tiqui.md  TESTING_STATUS.md  aqua_pass  build.sh  cheese.sh  cheese_mission.py  comp.sh  comp_3_cameras.sh  comp_single_camera.sh  comp_single_camera_task3.sh  comp_task1_2.sh  comp_task3.sh  comp_task4.sh  comprehensive_media_test.py  echo_important_topics.sh  echo_planning_topics.sh  kill_all_ros.sh  monitor_camera_move.sh  record_map_data.sh  replay_map.sh  run_visualizer.sh  set_camera_fps.sh  src  super_cool_test.sdf  (+8 more)
computer_vision/: .gitignore  CAMERA_MAPPING_UPDATE.md  COMPETITION.md  DESIGN_STRATEGY.md  DISTANCE_ESTIMATOR_CHANGES.md  FUSION_NODE_GUIDE.md  NODES.md  NODES_AND_CAMERAS.md  NODE_SCRIPTS.md  PERFORMANCE_ANALYSIS.md  README.md  SIMULATIONS.md  TENSORRT.md  color_filter.py  live_detection.py  set_camera_fps.sh  simulations.md
computer_vision/camera_calibration/: README.md  calibrate_from_csv.py  calibration_measurements.csv  estimate_distance_angle.py  get_buoy_bbox.py
computer_vision/camera_grid_calibration/: README.md  calibrate.py  camera_calib.npz  extract_frames.py  run_extract_200.py
computer_vision/cv_scripts/: build_fp16_engine.sh  class_mapping.yaml  compute_distance_scale.py  distance_from_specs_only.py  run_inference_and_distance.py  test_engine_image.py
computer_vision/install/: local_setup.sh  setup.sh
computer_vision/log/: latest_build
computer_vision/model_building_and_training/: TENSORRT.md  export_onnx.py
computer_vision/model_training/: TENSORRT.md  test_inference.py
computer_vision/number_model_export/: README.md
computer_vision/src/cv_lidar_fusion/: README.md  package.xml  setup.py
computer_vision/src/cv_ros_nodes/: package.xml  setup.cfg  setup.py
computer_vision/task_specific/Docking/: number_detection.py
computer_vision/task_specific/task4/: diagnose_cross.py  (+6 more)
cv_lidar_fusion/: README.md  package.xml  setup.cfg  setup.py
cv_lidar_fusion/cv_lidar_fusion/: vision_lidar_fusion.py
cv_ros_nodes/: DESIGN_STRATEGY.md  NODE_SCRIPTS.md  NODE_inference.py  NODE_preprocessing.py  computer_vision_launch.py  digit_recog.py  vision_combiner.py  vision_inference.py  vision_preprocessing.py
cv_ros_nodes/config/: class_mapping.yaml
cv_scripts/: class_mapping.yaml
gz-waves-models/worlds/: .waves.sdf.swp  waves.sdf
gz-waves/install/: local_setup.sh
gz-waves/log/: latest_build
install/: local_setup.sh  setup.sh
log/: latest_build
map_data_20260221_091701/: map_data_20260221_091701_0.db3.zstd  metadata.yaml
mapping/: .gitignore  COMPETITION.md  MAPPING_AND_BOAT_POSITION_README.md  QUICKSTART.md  README.md  WSL2_LIDAR_SETUP.md  cleanup_unwanted_files.ps1  inside_bay_test_settings  test_fov.py  test_rotation.sh
mapping/src/: unitree_lidar_ros2
mapping/src/global_frame/: CMakeLists.txt  README.md  package.xml
mapping/src/global_frame/global_frame/: __init__.py  boat_state_node.py  detection_to_global_node.py  lat_lon_to_enu.py
mapping/src/global_frame/launch/: global_frame.launch.py
mapping/src/global_frame/msg/: BoatPose.msg  GlobalDetection.msg  GlobalDetectionArray.msg
model_testing_training/: TENSORRT_SETUP.md  export_yolo_to_onnx.py  test_inference.py  test_onnx_single_image.py
planning/: LEFT_RIGHT_BUOY_NAV_INTEGRATION.md  PLANNING_SYSTEM_GUIDE.md  README.md  TaskMaster.py  test.py
planning/Global/: Task1.py  Task2.py  Task3.py  Task4.py  Task6.py  docking_local_planner.py  entities.py  goal_utils.py  left_right_buoy_nav.py  task5_global_planner.py  types.py
planning/Global_Planner/: README.md  package.xml  setup.cfg  setup.py
planning/Global_Planner/global_planner/: __init__.py  global_planner_node.py  watchdogs.py
planning/Global_Planner/launch/: global_planner.launch.py
planning/Input_Entities/: task1_entities.json  task2_entities.json  task3_entities.json
planning/Local/: potential_fields_planner.py
simulations/: PATHS.md  README.md  fix_ardupilot_build_permissions.sh  simulation_full.bash
simulations/worlds/: aquatonomous_world.sdf
src/: light_detection.py  pointcloud_to_laserscan_node.cpp  preprocessing_node.py
src/maveasy/: CMakeLists.txt  package.xml
src/my_lidar_pkg/: CMakeLists.txt  setup.py
src/pointcloud_filters/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/pointcloud_filters/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/pointcloud_filters/install/pointcloud_filters/lib/pointcloud_filters/: lidar_range_filter
src/pointcloud_filters/install/pointcloud_filters/share/ament_index/resource_index/parent_prefix_path/: pointcloud_filters
src/pointcloud_filters/install/pointcloud_filters/share/pointcloud_filters/: README.md  local_setup.sh  package.dsv  package.ps1  package.sh
src/pointcloud_filters/install/pointcloud_filters/share/pointcloud_filters/cmake/: ament_cmake_export_dependencies-extras.cmake  export_pointcloud_filters__rosidl_generator_pyExport.cmake
src/pointcloud_filters/launch/: lidar_range_filter.launch.py
src/pointcloud_filters/log/: latest_build
src/pointcloud_filters/pointcloud_filters/: .lidar_range_filter.py.swp
src/pointcloud_filters/pointcloud_filters/install/: local_setup.sh  setup.sh
src/sound_signal/: CMakeLists.txt  package.xml
src/sound_signal/src/: sound_signal.cpp
src/sound_signal_pkg/sound_signal/: CMakeLists.txt  package.xml
src/sound_signal_pkg/sound_signal/src/: sound_signal.cpp
testing_media/: slowdown_media.py
web_server_map/: README.md  package.xml  setup.py
web_server_map/launch/: map_visualizer.launch.py
web_server_map/src/web_server_map/: CMakeLists.txt  README.md  build.sh  map_visualizer_node.py  package.xml  web_server.py
web_server_map/src/web_server_map/web/: index.html  map.js
web_server_map/web/: index.html  map.js  style.css
(+169 files in other folders)
