<?xml version="1.0"?>
<package format="3">
  <name>global_frame</name>
  <version>0.1.0</version>
  <description>Boat state (GPS + heading) and global-frame detections for planning.</description>
  <maintainer email="lorenzo@example.com">lorenzo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>launch_ros</depend>
  <depend>pointcloud_filters</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
