<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sound_signal</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ethanastri@hotmail.com">ethan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
    <build_depend>std_msgs</build_depend>
  <build_depend>audio_common</build_depend>
  <build_depend>audio_common_msgs</build_depend>

  <depend>sound_signal_msgs</depend>

      <exec_depend>rclcpp</exec_depend>
        <exec_depend>std_msgs</exec_depend>
  <exec_depend>audio_common</exec_depend>
  <build_depend>audio_common_msgs</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
